# wombatinstaller

./: .gitignore  CMakeLists.txt  LICENSE  README.md
wombatinstaller/: installer.c  tui.c
